添加上下传待定1